--- a/package.json
+++ b/package.json
@@ -4,7 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --runInBand --detectOpenHandles --forceExit --verbose"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "collectCoverageFrom": [
+      "**/*.js",
+      "!**/node_modules/**",
+      "!**/tests/**",
+      "!**/test/**",
+      "!**/migrations/**",
+      "!**/seeders/**",
+      "!**/data/**",
+      "!**/bin/**",
+      "!**/coverage/**"
+    ],
+    "coverageDirectory": "coverage",
+    "coverageReporters": [
+      "text",
+      "lcov",
+      "html"
+    ]
   },
   "repository": {
     "type": "git",
@@ -18,13 +38,17 @@
   },
   "homepage": "https://github.com/muhammad-khamil/IP-Kemil-HCK85#readme",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "google-auth-library": "^10.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "pg": "^8.16.3",
     "sequelize": "^6.37.7"
   },
@@ -32,6 +56,7 @@
     "jest": "^30.0.5",
     "nodemon": "^3.1.10",
     "sequelize-cli": "^6.6.3",
-    "supertest": "^7.1.3"
+    "supertest": "^7.1.4",
+    "test": "^3.3.0"
   }
 }
